# ATCortex

./: ATCortex.c  CMakeLists.txt  CMakePresets.json  README.md  extern_msg_handle.c  extern_msg_handle.h  interface.c  interface.h  log.h  recv_data_handle.c  recv_data_handle.h  ring_buffer.c  ring_buffer.h  send_msg_handle.c  send_msg_handle.h  slist.c  slist.h  stack.c  stack.h  urc_handle.c  urc_handle.h
core/: at_dispatcher.h  at_engine.c  at_engine.h  at_log.c  at_parser.c  at_parser.h  at_queue.c  at_queue.h
document/: at框架设计.prg
example/: main.c
include/: ATCortex.h  at.h
port/: at_port.c  at_port.h
src/core/: at_dispatcher.c  at_dispatcher.h  at_engine.c  at_log.h  at_parser.c  at_parser.h  at_queue.c  at_queue.h
src/example/: main.c  test.c  test2.c
src/include/: at.h
src/port/: at_port.c  at_port.h
